# SieveOfEratosthenesOpenCL

./: .gitignore  README.md  meson.build  setup.py  shell.nix  sieve_of_eratosthenes.c  sieve_of_eratosthenes.cl  sieve_of_eratosthenes.h  sieve_of_eratosthenes_binding.pyx  test.py
.cache/clangd/index/: sieve_of_eratosthenes.c.9EF038FD7B1345CD.idx  sieve_of_eratosthenes.h.CEF53EF694060B9B.idx
